force-app/main/default/objects/Project__c/fields/Closing_Survey_Notes__c.field-meta.xml
<CustomField>
    <fullName>Closing_Survey_Notes__c</fullName>
    <description>Ticket #27520</description>
    <label>Closing Survey Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>