force-app/main/default/objects/Project__c/fields/Customer_PjM__c.field-meta.xml
<CustomField>
    <fullName>Customer_PjM__c</fullName>
    <label>Customer PjM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>