force-app/main/default/objects/Project__c/fields/Engagement_Manager__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Manager__c</fullName>
    <label>Engagement Manager</label>
    <type>TextArea</type>
</CustomField>