force-app/main/default/objects/Project__c/fields/OA_Customer_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>OA_Customer_Internal_ID__c</fullName>
    <label>OA Customer Internal ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>