force-app/main/default/objects/Project__c/fields/Product_LineNew__c.field-meta.xml
<CustomField>
    <fullName>Product_LineNew__c</fullName>
    <label>Product Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>