force-app/main/default/objects/Project__c/fields/Project_Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>Project_Delay_Reason__c</fullName>
    <label>Project Delay Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>