force-app/main/default/objects/Project__c/fields/Project_Link__c.field-meta.xml
<CustomField>
    <fullName>Project_Link__c</fullName>
    <description>Gainsight was not displaying certain fields in reports as hyperlinks to the related record, so this field was created so they would have a clickable field in a report leading to the record.</description>
    <formula>HYPERLINK(&quot;https://intapp.my.salesforce.com/&quot;+Id, Open_Air_Project_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Link</label>
    <type>Text</type>
</CustomField>